[gd_scene load_steps=3 format=3 uid="uid://ckmg3uavjya6r"]

[ext_resource type="Theme" uid="uid://bb0fpj048smll" path="res://theme.tres" id="1_3v7kq"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_o1an0"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1an0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.364706, 0.364706, 0.364706, 0.886275)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 9.0
offset_right = 69.0
offset_bottom = 32.0
grow_horizontal = 2
theme = ExtResource("1_3v7kq")
text = "Pause Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back to the game" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3v7kq")
text = "Back to the game"

[node name="Back to main menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3v7kq")
text = "Back to main menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3v7kq")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Back to the game" to="." method="_on_back_to_the_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Back to main menu" to="." method="_on_back_to_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
